# pobr-logo

./: .gitignore  CMakeLists.txt
src/: ConvolutionMask.cpp  ConvolutionMask.h  DetectedObject.cpp  DetectedObject.h  Detector.cpp  Detector.h  Morphology.cpp  Morphology.h  Segment.cpp  Segment.h  Transform.cpp  Transform.h  Utils.cpp  Utils.h  logger.h  main.cpp
